--- a/customer-manager/src/main/resources/application.properties
+++ b/customer-manager/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/pepper-bank
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.data-source-properties.pool-name=pepper-bank
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
