--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <java.version>1.8</java.version>
         <kotlin.version>1.4.21</kotlin.version>
         <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
+        <spring-boot-starter-log4j.version>2.3.7.RELEASE</spring-boot-starter-log4j.version>
         <hibernate.version>5.4.27.Final</hibernate.version>
         <hibernate-validator.version>6.1.7.Final</hibernate-validator.version>
         <javax-el.version>3.0.0</javax-el.version>
@@ -37,6 +38,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-jpa</artifactId>
