--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,9 @@
         <kotlin.version>1.4.21</kotlin.version>
         <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
         <spring-boot-starter-log4j.version>2.3.7.RELEASE</spring-boot-starter-log4j.version>
-        <hibernate.version>5.4.27.Final</hibernate.version>
-        <hibernate-validator.version>6.1.7.Final</hibernate-validator.version>
         <javax-el.version>3.0.0</javax-el.version>
         <postgres.version>42.2.18</postgres.version>
+        <spring-boot-validation.version>2.1.6.RELEASE</spring-boot-validation.version>
     </properties>
 
     <dependencyManagement>
@@ -49,26 +48,16 @@
                 <version>${spring-boot.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-core</artifactId>
-                <version>${hibernate.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-validator</artifactId>
-                <version>${hibernate-validator.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.glassfish</groupId>
-                <artifactId>javax.el</artifactId>
-                <version>${javax-el.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-devtools</artifactId>
                 <version>${spring-boot.version}</version>
                 <scope>runtime</scope>
                 <optional>true</optional>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-validation</artifactId>
+                <version>${spring-boot-validation.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
