--- a/pepperbank-account-manager/pom.xml
+++ b/pepperbank-account-manager/pom.xml
@@ -9,21 +9,21 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>account-manager</artifactId>
+    <artifactId>pepperbank-account-manager</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>account-manager</name>
+    <name>pepperbank-account-manager</name>
     <description>Módulo de manutenção de contas</description>
 
     <dependencies>
         <!-- DEPENDENCIAS INTERNAS -->
         <dependency>
             <groupId>com.pepper.bank</groupId>
-            <artifactId>repository</artifactId>
+            <artifactId>pepperbank-model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.pepper.bank</groupId>
-            <artifactId>bank-utils</artifactId>
+            <artifactId>pepperbank-exception-handler</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
