--- a/pepperbank-customer-manager/src/main/resources/application.properties
+++ b/pepperbank-customer-manager/src/main/resources/application.properties
@@ -1,10 +1,13 @@
+#Configuração do banco de dados dev
 spring.datasource.url=jdbc:postgresql://localhost:5432/pepper-bank
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.data-source-properties.pool-name=pepper-bank
+
+#Configuralção do JPA
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=true
