--- a/pepperbank-repository/pom.xml
+++ b/pepperbank-repository/pom.xml
@@ -9,12 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>repository</artifactId>
+    <artifactId>pepperbank-repository</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.pepper.bank</groupId>
-            <artifactId>domain</artifactId>
+            <artifactId>pepperbank-model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
