--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <spring-boot-validation.version>2.1.6.RELEASE</spring-boot-validation.version>
         <mockito.version>3.3.3</mockito.version>
         <junit.version>4.12</junit.version>
+        <liquibase-core.version>4.2.2</liquibase-core.version>
     </properties>
 
     <dependencyManagement>
@@ -85,6 +86,11 @@
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-core</artifactId>
+                <version>${liquibase-core.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
