--- a/pepperbank-customer-manager/src/main/resources/application.properties
+++ b/pepperbank-customer-manager/src/main/resources/application.properties
@@ -1,13 +1,18 @@
 #Configuração do banco de dados dev
-spring.datasource.url=jdbc:postgresql://localhost:5432/pepper-bank
+spring.datasource.url=jdbc:postgresql://localhost:5432/pepperbank
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.hikari.data-source-properties.pool-name=pepper-bank
+spring.datasource.hikari.data-source-properties.pool-name=pepperbank
 
 #Configuralção do JPA
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
+
+#Liquibase
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+spring.liquibase.enabled=true
+spring.liquibase.default-schema=pepperbank
