Adicionado modulo utils. Adicionado conversor de String para LocalDate. Criado testes para este novo método. Criando classe de testes de serviço para customer.

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>pepperbank-model</module>
         <module>pepperbank-repository</module>
         <module>pepperbank-exception-handler</module>
+        <module>pepperbank-utils</module>
     </modules>
 
     <properties>
