--- a/pepperbank-customer-manager/pom.xml
+++ b/pepperbank-customer-manager/pom.xml
@@ -18,12 +18,14 @@
         <dependency>
             <groupId>com.pepper.bank</groupId>
             <artifactId>pepperbank-repository</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.pepper.bank</groupId>
             <artifactId>pepperbank-exception-handler</artifactId>
-            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.pepper.bank</groupId>
+            <artifactId>pepperbank-utils</artifactId>
         </dependency>
 
         <!-- DEPENDENCIAS EXTERNAS -->
