--- a/pepperbank-customer-manager/pom.xml
+++ b/pepperbank-customer-manager/pom.xml
@@ -18,14 +18,17 @@
         <dependency>
             <groupId>com.pepper.bank</groupId>
             <artifactId>pepperbank-repository</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.pepper.bank</groupId>
             <artifactId>pepperbank-exception-handler</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.pepper.bank</groupId>
             <artifactId>pepperbank-utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <!-- DEPENDENCIAS EXTERNAS -->
@@ -55,7 +58,10 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <version>${liquibase-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
         </dependency>
     </dependencies>
 
