--- a/pepperbank-repository/pom.xml
+++ b/pepperbank-repository/pom.xml
@@ -12,10 +12,13 @@
     <artifactId>pepperbank-repository</artifactId>
 
     <dependencies>
+        <!-- DEPENDENCIAS EXTERNAS -->
         <dependency>
             <groupId>com.pepper.bank</groupId>
             <artifactId>pepperbank-model</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- DEPENDENCIAS EXTERNAS -->
     </dependencies>
 
 </project>
