--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
                 <artifactId>liquibase-core</artifactId>
                 <version>${liquibase-core.version}</version>
             </dependency>
+            <dependency>
+                <groupId>br.com.caelum.stella</groupId>
+                <artifactId>caelum-stella-core</artifactId>
+                <version>2.1.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
