--- a/pepperbank-customer-manager/pom.xml
+++ b/pepperbank-customer-manager/pom.xml
@@ -63,6 +63,10 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
