--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
         <mockito.version>3.3.3</mockito.version>
         <junit.version>4.12</junit.version>
         <liquibase-core.version>4.2.2</liquibase-core.version>
+        <h2-database.version>1.4.200</h2-database.version>
+        <caellum-stella-core.version>2.1.2</caellum-stella-core.version>
     </properties>
 
     <dependencyManagement>
@@ -93,10 +95,18 @@
                 <artifactId>liquibase-core</artifactId>
                 <version>${liquibase-core.version}</version>
             </dependency>
+            <!--Banco de dados para testes-->
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>${h2-database.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <!--Validação de CPF-->
             <dependency>
                 <groupId>br.com.caelum.stella</groupId>
                 <artifactId>caelum-stella-core</artifactId>
-                <version>2.1.2</version>
+                <version>${caellum-stella-core.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
