Correções nos testes de integração

--- a/pepperbank-customer-manager/src/main/resources/application.properties
+++ b/pepperbank-customer-manager/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#Configuração do banco de dados dev
-spring.datasource.url=jdbc:postgresql://localhost:5432/pepperbank
+#Configuração do banco de dados prod
+spring.datasource.url=jdbc:postgresql://localhost:5433/dtbasepepper
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.hikari.data-source-properties.pool-name=pepperbank
+spring.datasource.hikari.data-source-properties.pool-name=poolpepperbank
 
 #Configuralção do JPA
 spring.jpa.show-sql=true
