--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,24 @@ services:
     environment:
       POSTGRES_USER: "root"
       POSTGRES_PASSWORD: "root"
-      POSTGRES_DB: "pepperbank"
+      POSTGRES_DB: "dtbasepepper"
     volumes:
       - ./docker-init-db.sql:/docker-entrypoint-initdb.d/docker-init-db.sql
     ports:
       - "5432:5432"
+    networks:
+      - postgres-compose-network
+
+  prod-postgres-compose:
+    image: postgres
+    environment:
+      POSTGRES_USER: "root"
+      POSTGRES_PASSWORD: "root"
+      POSTGRES_DB: "dtbasepepper"
+    volumes:
+      - ./docker-init-db.sql:/docker-entrypoint-initdb.d/docker-init-db.sql
+    ports:
+      - "5434:5434"
     networks:
       - postgres-compose-network
 
@@ -23,6 +36,7 @@ services:
       - "8081:80"
     depends_on:
       - teste-postgres-compose
+      - prod-postgres-compose
     networks:
       - postgres-compose-network
 
