--- a/pepperbank-customer-manager/src/main/resources/application-test.properties
+++ b/pepperbank-customer-manager/src/main/resources/application-test.properties
@@ -1,25 +1,3 @@
-# DATASOURCE
-spring.datasource.url=jdbc:h2:mem:testedb;INIT=runscript from 'classpath:create-schema-database.sql';
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# JPA
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.generate-ddl=false
-
-#Liquibase
-spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
-spring.liquibase.enabled=true
-spring.liquibase.default-schema=pepperbank
-
-spring.test.database.replace=none
-
+#Configuração do banco de dados test
+spring.datasource.url=jdbc:postgresql://localhost:5432/dtbasepepper
 
