--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,22 @@ services:
       POSTGRES_DB: "dtbasepepper"
     volumes:
       - ./docker-init-db.sql:/docker-entrypoint-initdb.d/docker-init-db.sql
+    expose:
+      - "5433"
+    ports:
+      - "5433:5433"
+    networks:
+      - postgres-compose-network
+    command: -p 5433
+
+  dev-postgres-compose:
+    image: postgres
+    environment:
+      POSTGRES_USER: "root"
+      POSTGRES_PASSWORD: "root"
+      POSTGRES_DB: "dtbasepepper"
+    volumes:
+      - ./docker-init-db.sql:/docker-entrypoint-initdb.d/docker-init-db.sql
     ports:
       - "5432:5432"
     networks:
