Correções e implementaçao de serilização do Customer em Customer TO. Modificado modulo CustomerTO

--- a/pepperbank-account-manager/src/test/resource/application-test.properties
+++ b/pepperbank-account-manager/src/test/resource/application-test.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.data-source-properties.pool-name=poolpepperbank
 
-#Configuralção do JPA
+#Configuração do JPA
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
