Implementando interface de API para customer para compartilhamento de DTO entre os modulos. Terá chamada entre eles.

--- a/pepperbank-customer-manager/pom.xml
+++ b/pepperbank-customer-manager/pom.xml
@@ -15,6 +15,10 @@
         <!-- Internal Dependencies -->
         <dependency>
             <groupId>com.pepper.bank</groupId>
+            <artifactId>pepperbank-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.pepper.bank</groupId>
             <artifactId>pepperbank-model</artifactId>
         </dependency>
         <dependency>
