--- a/pepperbank-api/pom.xml
+++ b/pepperbank-api/pom.xml
@@ -13,6 +13,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.pepper.bank</groupId>
+            <artifactId>pepperbank-utils</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
