Alteraçoes e correçoes do account-manager

--- a/pepperbank-customer-manager/src/main/resources/application.properties
+++ b/pepperbank-customer-manager/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+#Context
+spring.application.name=pepperbank-customer-manager
+server.servlet.context-path=/customer-manager
+server.port=8080
+spring.banner.location=classpath:custom-banner.txt
+
 #Configuração do banco de dados local
 spring.datasource.url=jdbc:postgresql://localhost:5432/dtbasepepper
 spring.datasource.username=root
