--- a/pepperbank-account-manager/pom.xml
+++ b/pepperbank-account-manager/pom.xml
@@ -25,6 +25,10 @@
             <groupId>com.pepper.bank</groupId>
             <artifactId>pepperbank-utils</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.pepper.bank</groupId>
+            <artifactId>pepperbank-api</artifactId>
+        </dependency>
         <!-- External Dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -56,6 +60,10 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
     </dependencies>
 
