--- a/pepperbank-account-manager/src/main/resources/application.properties
+++ b/pepperbank-account-manager/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+#Context
+spring.application.name=pepperbank-account-manager
+server.servlet.context-path=/account-manager
+server.port=8081
+spring.banner.location=classpath:custom-banner.txt
+
 #Configuração do banco de dados local
 spring.datasource.url=jdbc:postgresql://localhost:5432/dtbasepepper
 spring.datasource.username=root
@@ -14,5 +20,8 @@ spring.jpa.generate-ddl=false
 
 #Liquibase
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
 spring.liquibase.default-schema=pepperbank
+
+#URLs
+pepper.bank.customer.manager=localhost:8080/customer-manager
