--- a/pepperbank-integration/pom.xml
+++ b/pepperbank-integration/pom.xml
@@ -9,20 +9,23 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>pepperbank-api</artifactId>
+    <artifactId>pepperbank-integration</artifactId>
+
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
 
     <dependencies>
+        <!-- Internal Dependencies -->
         <dependency>
             <groupId>com.pepper.bank</groupId>
-            <artifactId>pepperbank-utils</artifactId>
+            <artifactId>pepperbank-api</artifactId>
         </dependency>
+        <!-- External Dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
