--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>pepperbank-exception-handler</module>
         <module>pepperbank-utils</module>
         <module>pepperbank-api</module>
+        <module>pepperbank-integration</module>
     </modules>
 
     <properties>
@@ -37,12 +38,34 @@
         <postgres.version>42.2.18</postgres.version>
         <spring-boot-validation.version>2.1.6.RELEASE</spring-boot-validation.version>
         <mockito.version>3.3.3</mockito.version>
-        <junit.version>4.12</junit.version>
+        <junit.version>4.13.1</junit.version>
         <liquibase-core.version>4.2.2</liquibase-core.version>
         <caellum-stella-core.version>2.1.2</caellum-stella-core.version>
         <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
         <jackson-datatype-jsr310.version>2.12.3</jackson-datatype-jsr310.version>
+        <spring-cloud-starter-openfeign.version>3.0.2</spring-cloud-starter-openfeign.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-reflect</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson-datatype-jsr310.version}</version>
+        </dependency>
+    </dependencies>
 
     <dependencyManagement>
         <dependencies>
@@ -78,7 +101,7 @@
                 <version>${project.version}</version>
             </dependency>
 
-            <!-- External Depencies -->
+            <!-- External Dependencies -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
@@ -108,6 +131,11 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-openfeign</artifactId>
+                <version>${spring-cloud-starter-openfeign.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>${postgres.version}</version>
@@ -129,7 +157,7 @@
                 <artifactId>liquibase-core</artifactId>
                 <version>${liquibase-core.version}</version>
             </dependency>
-            <!--Validação de CPF-->
+            <!--CPF validation-->
             <dependency>
                 <groupId>br.com.caelum.stella</groupId>
                 <artifactId>caelum-stella-core</artifactId>
@@ -137,27 +165,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-reflect</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jdk8</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>${log4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>${jackson-datatype-jsr310.version}</version>
-        </dependency>
-    </dependencies>
 
     <build>
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
