--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_PASSWORD: "root"
       POSTGRES_DB: "dtbasepepper"
     volumes:
-      - ./docker-init-db.sql:/docker-entrypoint-initdb.d/docker-init-db.sql
+      - ./resources/docker-init-db.sql:/docker-entrypoint-initdb.d/docker-init-db.sql
     expose:
       - "5433"
     ports:
@@ -24,7 +24,7 @@ services:
       POSTGRES_PASSWORD: "root"
       POSTGRES_DB: "dtbasepepper"
     volumes:
-      - ./docker-init-db.sql:/docker-entrypoint-initdb.d/docker-init-db.sql
+      - ./resources/docker-init-db.sql:/docker-entrypoint-initdb.d/docker-init-db.sql
     ports:
       - "5432:5432"
     networks:
