Compartilhando os recursos entre os modulos, parte 2

--- a/pepperbank-customer-manager/src/main/resources/application.properties
+++ b/pepperbank-customer-manager/src/main/resources/application.properties
@@ -19,6 +19,6 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
 
 #Liquibase
-spring.liquibase.change-log=classpath:/resources/db/changelog/db.changelog-master.xml
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.liquibase.enabled=true
 spring.liquibase.default-schema=pepperbank
