Compartilhando os recursos entre os modulos, parte 3

--- a/pepperbank-account-manager/src/main/resources/application.properties
+++ b/pepperbank-account-manager/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jpa.generate-ddl=false
 
 #Liquibase
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
 spring.liquibase.default-schema=pepperbank
 
 #URLs
