--- a/pepperbank-account-manager/src/main/resources/application.properties
+++ b/pepperbank-account-manager/src/main/resources/application.properties
@@ -25,3 +25,7 @@ spring.liquibase.default-schema=pepperbank
 
 #URLs
 pepper.bank.customer.manager=localhost:8080/customer-manager
+
+#Feign
+feign.client.config.customerManager.connect-timeout=5000
+feign.client.config.customerManager.read-timeout=10000
