--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
         <jackson-datatype-jsr310.version>2.12.3</jackson-datatype-jsr310.version>
         <spring-cloud-starter-openfeign.version>3.0.2</spring-cloud-starter-openfeign.version>
+        <spring-cloud-starter-netflix-ribbon.version>2.2.9.RELEASE</spring-cloud-starter-netflix-ribbon.version>
     </properties>
 
     <dependencies>
@@ -131,11 +132,6 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-openfeign</artifactId>
-                <version>${spring-cloud-starter-openfeign.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>${postgres.version}</version>
@@ -162,6 +158,17 @@
                 <groupId>br.com.caelum.stella</groupId>
                 <artifactId>caelum-stella-core</artifactId>
                 <version>${caellum-stella-core.version}</version>
+            </dependency>
+            <!-- Feign -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-openfeign</artifactId>
+                <version>${spring-cloud-starter-openfeign.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+                <version>${spring-cloud-starter-netflix-ribbon.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
