--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <kotlin.version>1.4.21</kotlin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
+        <spring-boot.version>2.5.12</spring-boot.version>
         <log4j.version>2.17.1</log4j.version>
         <javax-el.version>3.0.0</javax-el.version>
         <postgres.version>42.2.25</postgres.version>
